[gd_scene load_steps=5 format=2]

[ext_resource path="res://_resources/card_shop/full_bg.png" type="Texture2D" id=1]
[ext_resource path="res://_scripts/scene_transitioner.gd" type="Script" id=2]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=3]

[sub_resource type="FontFile" id=1]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="scene_transitioner" type="Button"]
offset_right = 1278.0
offset_bottom = 718.0
focus_mode = 0
focus_mode = 0
flat = true
script = ExtResource( 2 )

[node name="loading_indicator" type="Node2D" parent="."]
z_index = 999

[node name="loading_label" type="Label" parent="loading_indicator"]
offset_left = 10.0
offset_top = 685.0
offset_right = 1269.0
offset_bottom = 721.0
theme_override_fonts/font = SubResource( 1 )
text = "LOADING . . ."
align = 2
autowrap = true

[node name="darker_screen" type="Sprite2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
z_index = 998
texture = ExtResource( 1 )
centered = false

[node name="transitioner_tween" type="Tween" parent="."]
